feat: init project Buscador autos
technical: change type of project: commonjs to module

feat: show all cars in the result section

feat: list of years in searching menu

feat: filter cars by brand or year

feat: filter cars by price(min-max)

feat: filter by cars doors

feat: filter by transmision

feat: filter by color and show message if not are results into searching

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "Glenn Galicia",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^10.0.1",
     "eslint": "^10.0.0",
